[package]
name = "curve420"
version = "0.1.1"
edition = "2021"
authors = ["Mikal Villa <mikalv@mikalv.net>"]
description = "Implementation of the Curve420 elliptic curve in Rust"
license = "Apache-2.0"
repository = "https://github.com/mikalv/curve420"
readme = "README.md"
keywords = ["elliptic-curve", "ecdh", "schnorr", "crypto"]
categories = ["cryptography"]

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
sha2 = "0.10"
rand = "0.8"
lazy_static = "1.4.0"
